# cpsc351

./: README.md  qsh.c
assns/ch15-16-17-17-18/: 15.md  16.md
assns/ch26-27/: 27.md
assns/ch5/: sim.md
assns/ch5/c/: 2.c  3.c
assns/ch7-8-9-10/: 7.md  9.md
ch15-16-17-17-18/: 15.md  16.md  17.md  18.md
ch26-27/: 26.md  27.md
ch5-hw-cpu-api/c/: 4.c  5.c  6.c  7.c
ch5/c/: 1.c
ch7-8-9-10-hw/: 10.md  7.md  8.md  9.md
dining-philosophers/: monitor.cpp
projects/: qsh.c
projects/banker_algorithm/: Cargo.toml  input.txt
projects/banker_algorithm/src/: main.rs
projects/dining-philosophers/: countdown_semaphore.c
